--- a/style.css
+++ b/style.css
@@ -95,11 +95,18 @@ a {
 
 #queryForm {
   display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-bottom: 10px;
+}
+
+.queryRow {
+  display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px 18px;
   align-items: start;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .queryContainer {
